drobna zmena textu

--- a/src/app/components/about.app.component.html
+++ b/src/app/components/about.app.component.html
@@ -50,12 +50,12 @@
 							<li><strong>Statistiky čidla:</strong> zobrazení údajů statistik měření v grafu a tabulce.</li>
 								<ul>
 									<li>Pod grafem je zobrazen posuvník, který lze použít pro filtrování zobrazených hodnot v grafu a tabulce dle času.</li>
-									<li>Výběrem naměřené hodnoty zobrazované v grafu (případně v tabulce) lze změnit datum na časové ose základní mapy a tím zobrazit k tomuto datu průměrné denní hodnoty všech čidel viditelných na mapě.</li>
+									<li>Výběrem naměřené hodnoty zobrazované v grafu (případně v tabulce) dojde ke změně i datumu na časové ose základní mapy a tím zobrazit k tomuto datu průměrné denní hodnoty všech čidel viditelných na mapě.</li>
 									<li>V případě statistiky „Denní 6h-22h“ a „Noční 22h-6h“ se v grafu zobrazuje hygienická norma (zelená čára). Naměřené hodnoty splňující hygienické normy jsou zobrazeny zeleně, nadlimitní hodnoty jsou zobrazeny červeně.</li>
 								</ul>
 							<li><strong>Výběr vrstev:</strong> Slouží k zobrazení podkladových strategických hlukových map z roku 2007 (železnice, silnice, Ostrava, Brno, Praha, letiště Ruzyně) (zdroj: ČÚZK).</li>
 						</ul>	
-					<p>Více viz. instruktážní video:</p>
+					<p>Více viz ukázkové video:</p>
 						<iframe  *hideItDevice="['mobile']"  id="ytplayer" type="text/html" src="https://www.youtube.com/embed/aT-Tc_rrIKs?autoplay=0" frameborder="0" class="showOnDesktop" allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe>
 						<iframe  *showItDevice="['mobile']"  id="ytplayer" type="text/html" src="https://www.youtube.com/embed/aT-Tc_rrIKs?autoplay=0" frameborder="0" class="showOnMobileLandPotrait" allowfullscreen="allowfullscreen" mozallowfullscreen="mozallowfullscreen" msallowfullscreen="msallowfullscreen" oallowfullscreen="oallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"></iframe>
 						<p>Pokud se video nezobrazuje správně, je k dispozici <a href="https://www.youtube.com/watch?v=aT-Tc_rrIKs" target="_blank">zde</a>.</p> 
