pridano jmeno do seznamu statistik

--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -9,7 +9,7 @@
 
 	<div class="statisContentDesktop" [collapse]="isHidden">
 		<div class="heading">
-			Zjištěné průměry hluku z čidla za období
+			Zjištěné průměry hluku z čidla za období ({{selSensorName}})
 		</div>
 		<div class="statisContentDesktopOverflow">
 			<tabs-statis></tabs-statis>
