oprava dat u legendy, margin u tooltipu cidla

--- a/src/app/components/about.app.component.html
+++ b/src/app/components/about.app.component.html
@@ -21,7 +21,7 @@
 				</div>
 				<div class="modal-body">
 					<p>Aplikace umožňuje vizualizaci hlukové zátěže na konkrétním místě a je určena pro laickou i odbornou veřejnost. 
-					   Kombinuje údaje ze sítě on-line hlukových čidel (v technologii <a href="https://www.lora-alliance.org/" target="_blank">LoRaWAN</a>) a data strategických hlukových map.</p>
+					   Kombinuje údaje ze sítě online hlukových čidel (v technologii <a href="https://www.lora-alliance.org/" target="_blank">LoRaWAN</a>) a data strategických hlukových map.</p>
 					<p>Čidla měří hluk s přesností +/- 3dB. Aktuálně jsou umístěna v těchto lokalitách:</p>
 						<ul>
 							<li>nám. Bratří Synků </li>
