posunuti vyberu vrstev pro velikost md (ipad)

--- a/src/app/components/map/overlays.menu.component.css
+++ b/src/app/components/map/overlays.menu.component.css
@@ -7,6 +7,10 @@
   font-size: 11px !important;
 }
 
+.leftPosition {
+  margin-left: -56px;
+}
+
 .layerTextLegend {
   text-align: left;
   position: relative;
